# ember

./: README.md  diff  pyproject.toml  requirements.txt
data/: bodmas_armed_18685_stats.json  bodmas_armed_unpacked_3249_stats.json  malimg_9315_stats.json
src/data/: __init__.py  bodmas.py  malimg.py  malware_bazaar.py
src/ember/: README.md  features.py
src/emberlib/: README.md  __init__.py
src/model/: sample.py
src/processors/: __init__.py  main.py
src/util/: misc.py
