[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emberlib"
version = "1.0.1"
description = "EMBER feature extractor"
readme = "src/emberlib/README.md"
requires-python = ">= 3.8, < 3.11"
keywords = ["static malware analysis", "EMBER features", "feature extraction"]
authors = [
  { name="Attila Mester", email="attilamester21@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "lief==0.16.6",
    "numpy>=1.22.0,<=2.2.6",
    "scikit-learn>=1.1.0,<=1.7.1"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["emberlib"]

[project.urls]
Homepage = "https://github.com/attilamester/ember"
